Chapter 13 — Listing 13.4: MapIteration.java Demonstrates: Map.forEach and Map.replaceAll vs entrySet iteration